; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_filter.c_copy_CTB.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_filter.c_copy_CTB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i64, i64)* @copy_CTB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_CTB(i32* %0, i32* %1, i32 %2, i32 %3, i64 %4, i64 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  store i64 %5, i64* %12, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = ptrtoint i32* %15 to i64
  %17 = load i32*, i32** %8, align 8
  %18 = ptrtoint i32* %17 to i64
  %19 = or i64 %16, %18
  %20 = load i64, i64* %11, align 8
  %21 = or i64 %19, %20
  %22 = load i64, i64* %12, align 8
  %23 = or i64 %21, %22
  %24 = and i64 %23, 15
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %60

26:                                               ; preds = %6
  store i32 0, i32* %13, align 4
  br label %27

27:                                               ; preds = %56, %26
  %28 = load i32, i32* %13, align 4
  %29 = load i32, i32* %10, align 4
  %30 = icmp slt i32 %28, %29
  br i1 %30, label %31, label %59

31:                                               ; preds = %27
  store i32 0, i32* %14, align 4
  br label %32

32:                                               ; preds = %46, %31
  %33 = load i32, i32* %14, align 4
  %34 = load i32, i32* %9, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %49

36:                                               ; preds = %32
  %37 = load i32*, i32** %7, align 8
  %38 = load i32, i32* %14, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32*, i32** %8, align 8
  %42 = load i32, i32* %14, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %41, i64 %43
  %45 = call i32 @AV_COPY64U(i32* %40, i32* %44)
  br label %46

46:                                               ; preds = %36
  %47 = load i32, i32* %14, align 4
  %48 = add nsw i32 %47, 8
  store i32 %48, i32* %14, align 4
  br label %32

49:                                               ; preds = %32
  %50 = load i64, i64* %11, align 8
  %51 = load i32*, i32** %7, align 8
  %52 = getelementptr inbounds i32, i32* %51, i64 %50
  store i32* %52, i32** %7, align 8
  %53 = load i64, i64* %12, align 8
  %54 = load i32*, i32** %8, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 %53
  store i32* %55, i32** %8, align 8
  br label %56

56:                                               ; preds = %49
  %57 = load i32, i32* %13, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %13, align 4
  br label %27

59:                                               ; preds = %27
  br label %94

60:                                               ; preds = %6
  store i32 0, i32* %13, align 4
  br label %61

61:                                               ; preds = %90, %60
  %62 = load i32, i32* %13, align 4
  %63 = load i32, i32* %10, align 4
  %64 = icmp slt i32 %62, %63
  br i1 %64, label %65, label %93

65:                                               ; preds = %61
  store i32 0, i32* %14, align 4
  br label %66

66:                                               ; preds = %80, %65
  %67 = load i32, i32* %14, align 4
  %68 = load i32, i32* %9, align 4
  %69 = icmp slt i32 %67, %68
  br i1 %69, label %70, label %83

70:                                               ; preds = %66
  %71 = load i32*, i32** %7, align 8
  %72 = load i32, i32* %14, align 4
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds i32, i32* %71, i64 %73
  %75 = load i32*, i32** %8, align 8
  %76 = load i32, i32* %14, align 4
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds i32, i32* %75, i64 %77
  %79 = call i32 @AV_COPY128(i32* %74, i32* %78)
  br label %80

80:                                               ; preds = %70
  %81 = load i32, i32* %14, align 4
  %82 = add nsw i32 %81, 16
  store i32 %82, i32* %14, align 4
  br label %66

83:                                               ; preds = %66
  %84 = load i64, i64* %11, align 8
  %85 = load i32*, i32** %7, align 8
  %86 = getelementptr inbounds i32, i32* %85, i64 %84
  store i32* %86, i32** %7, align 8
  %87 = load i64, i64* %12, align 8
  %88 = load i32*, i32** %8, align 8
  %89 = getelementptr inbounds i32, i32* %88, i64 %87
  store i32* %89, i32** %8, align 8
  br label %90

90:                                               ; preds = %83
  %91 = load i32, i32* %13, align 4
  %92 = add nsw i32 %91, 1
  store i32 %92, i32* %13, align 4
  br label %61

93:                                               ; preds = %61
  br label %94

94:                                               ; preds = %93, %59
  ret void
}

declare dso_local i32 @AV_COPY64U(i32*, i32*) #1

declare dso_local i32 @AV_COPY128(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
